@@ -1,3 +1,8 @@
+2019-03-14  Richard Biener  <rguenther@suse.de>
+
+	PR middle-end/89572
+	* gcc.dg/torture/pr89572.c: New testcase.
+
 2019-03-13  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	PR fortran/87673
